--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,15 +1,29 @@
-worker_processes  1;
+worker_processes  4;
 
 events {
-  worker_connections  1024;
+  worker_connections  8192;
 }
 
 http {
+  
+  log_format with_time '$remote_addr - $remote_user [$time_local] '
+                     '"$request" $status $body_bytes_sent '
+                     '"$http_referer" "$http_user_agent" $request_time';
+  access_log /var/log/nginx/access.log with_time;
+ 
+  server_tokens off;
+  sendfile on;
+  tcp_nopush on;
+ 
   upstream app {
     server 127.0.0.1:8080;
   }
 
   server {
+    root /home/isucon/webapp/static;
+    location ~ ^/(css|js|fonts) {
+    
+    }
     location / {
       proxy_set_header Host $host;
       proxy_pass http://app;
