--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,24 +5,26 @@ events {
 }
 
 http {
-  
+
   log_format with_time '$remote_addr - $remote_user [$time_local] '
                      '"$request" $status $body_bytes_sent '
                      '"$http_referer" "$http_user_agent" $request_time';
   access_log /var/log/nginx/access.log with_time;
- 
+
   server_tokens off;
   sendfile on;
   tcp_nopush on;
- 
+
   upstream app {
     server 127.0.0.1:8080;
+    server 203.104.208.241;
+    server 203.104.208.242;
   }
 
   server {
     root /home/isucon/webapp/static;
     location ~ ^/(css|js|fonts) {
-    
+
     }
     location / {
       proxy_set_header Host $host;
