ロードのバグ修正

--- a/conf/perl.conf
+++ b/conf/perl.conf
@@ -4,4 +4,4 @@ command=/home/isucon/env.sh carton exec -- plackup -s Starman -p 8080 --workers 
 user=isucon
 stdout_logfile=/tmp/isucon.perl.log
 stderr_logfile=/tmp/isucon.perl.log
-autostart=false
+autostart=true
